[metadata]
name = sqleyes
version = 0.1.4
description = A CLI in Python that analyzes raw SQL queries for common anti-patterns
long_description_content_type = text/markdown
long_description = file: README.md
keywords = SQL, anti-patterns, analysis
author = Leonardo Mathon
author_email = info@leonardomathon.nl
home_page = https://leonardomathon.nl
license = MIT
license_file = LICENSE
requires_dist = setuptools
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    sqleyes
    sqleyes.detector
    sqleyes.detector.antipatterns
    sqleyes.utils
install_requires =
    sqlparse>=0.4.2
python_requires = >=3.6
package_dir =
    =.
zip_safe = no

[options.entry_points]
console_scripts =
    sqleyes = sqleyes.cli:cli

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
sqleyes = py.typed

[flake8]
max-line-length = 160
